--- a/Desktop/mini-porfolio/CSS/style.css
+++ b/Desktop/mini-porfolio/CSS/style.css
@@ -13,25 +13,31 @@ body {
 /* HEADER */
 .site-header {
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgb(0, 0, 0);
 }
 
 .navbar {
   max-width: 1200px;
   height: 80px;
   margin: 0 auto;
-  padding: 0 40px;
-
+  padding: 0px 40px;
+  /* position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;  */
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 /* LOGO */
-.logo {
-  font-size: 22px;
-  font-weight: 700;
-  text-transform: uppercase;
+.logo{
+}
+.logo img {
+
+height: 200px;
+
 }
 
 .logo-accent {
@@ -156,4 +162,5 @@ body {
 .hero-image img {
   height: 85vh;
   object-fit: cover;
+  border-radius: 100%;
 }
