--- a/Desktop/mini-porfolio/CSS/style.css
+++ b/Desktop/mini-porfolio/CSS/style.css
@@ -13,7 +13,7 @@ body {
 /* HEADER */
 .site-header {
   width: 100%;
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(53, 72, 181, 0.977);
 }
 
 .navbar {
@@ -21,11 +21,11 @@ body {
   height: 80px;
   margin: 0 auto;
   padding: 0px 40px;
-  /* position: fixed;
+   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000;  */
+  z-index: 1000;  
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -162,5 +162,5 @@ height: 200px;
 .hero-image img {
   height: 85vh;
   object-fit: cover;
-  border-radius: 100%;
+  border-radius: 1000px;
 }
